[package]
name = "skeld"
version = "0.4.1"
edition = "2024"
rust-version = "1.85"

authors = ["hacrvlq <hacrvlq@proton.me"]
description = "a tui tool for opening projects in a restricted sandbox to prevent supply chain attacks such as typosquatting"
keywords = ["sandboxing", "supply-chain", "security", "project-launcher", "tui"]
categories = ["command-line-interface"]
readme = "docs/README.md"
repository = "https://github.com/hacrvlq/skeld"
license = "MIT"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
crossterm = { version = "0.29.0", default-features = false, features = ["bracketed-paste", "events"] }
libc = "0.2.155"
seccompiler = "0.5.0"
nix = { version = "0.29.0", features = ["process", "fs"] }
toml-span = { version = "0.5.0", features = ["reporting"] }
codespan-reporting = "0.12.0"
derive_more = { version = "2.0.1", features = ["from", "display"] }
clap = { version = "4.5.13", features = ["derive"] }
unicode-width = "0.2.0"
