[package]
name = "skeld"
version = "0.5.0-dev"
edition = "2024"
rust-version = "1.87"

authors = ["hacrvlq <hacrvlq@proton.me"]
description = "a tui tool for opening projects in a restricted sandbox to prevent supply chain attacks such as typosquatting"
keywords = ["sandboxing", "supply-chain", "security", "project-launcher", "tui"]
categories = ["command-line-interface"]
readme = "docs/README.md"
repository = "https://github.com/hacrvlq/skeld"
license = "MIT OR Apache-2.0"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
crossterm = { version = "0.29.0", default-features = false, features = ["bracketed-paste", "events"] }
libc = "0.2.155"
seccompiler = "0.5.0"
nix = { version = "0.29.0", features = ["process", "fs"] }
toml-span = { version = "0.5.0", features = ["reporting"] }
codespan-reporting = "0.12.0"
derive_more = { version = "2.0.1", features = ["from", "display"] }
clap = { version = "4.5.13", features = ["derive"] }
unicode-width = "0.2.0"

[lints.rust]
unused_qualifications = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
allow_attributes = "warn"
unnecessary_semicolon = "warn"
redundant_closure_for_method_calls = "warn"

nursery = { level = "warn", priority = -1 }
option_if_let_else = "allow"
cognitive_complexity = "allow"
missing_const_for_fn = "allow"
use_self = "allow"
