[package]
name = "skeld"
version = "0.6.0-dev"
edition = "2024"
rust-version = "1.95"

authors = ["hacrvlq <hacrvlq@proton.me"]
description = "a TUI tool for opening projects inside a restricted sandbox"
keywords = ["sandboxing", "project-launcher", "tui"]
categories = ["command-line-utilities", "security"]
repository = "https://github.com/hacrvlq/skeld"
license = "MIT OR Apache-2.0"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dependencies]
crossterm = { version = "0.29", default-features = false, features = ["bracketed-paste", "events"] }
libc = "0.2"
seccompiler = "0.5"
nix = { version = "0.30", features = ["process", "fs", "term"] }
toml-span = { version = "0.6", features = ["reporting"] }
codespan-reporting = "0.13"
derive_more = { version = "2.0", features = ["from", "display", "debug"] }
clap = { version = "4.5", features = ["derive"] }
unicode-width = "0.2"

[lints.rust]
unused_qualifications = "warn"
unused_crate_dependencies = "warn"

[lints.clippy]
allow_attributes = "warn"
unnecessary_semicolon = "warn"
redundant_closure_for_method_calls = "warn"

nursery = { level = "warn", priority = -1 }
option_if_let_else = "allow"
cognitive_complexity = "allow"
missing_const_for_fn = "allow"
use_self = "allow"
